<resources>
    <string name="app_name">Calculator</string>

    <!-- Special Strings -->
    <string name="button_blank_text">Button</string>
    <string name="button_ac_text">AC</string>
    <string name="button_negative_text">-/+</string>
    <string name="button_memory_store_text">MS</string>
    <string name="button_memory_recall_text">MR</string>
    <string name="button_square_text">x²</string>
    <string name="button_square_root_text">√</string>
    <string name="button_percent_text">%</string>


    <!-- Numeric Strings -->
    <string name="button_zero_text">0</string>
    <string name="button_one_text">1</string>
    <string name="button_two_text">2</string>
    <string name="button_three_text">3</string>
    <string name="button_four_text">4</string>
    <string name="button_five_text">5</string>
    <string name="button_six_text">6</string>
    <string name="button_seven_text">7</string>
    <string name="button_eight_text">8</string>
    <string name="button_nine_text">9</string>

    <!-- Operator Strings -->
    <string name="button_equals_text">=</string>
    <string name="button_plus_text">+</string>
    <string name="button_minus_text">-</string>
    <string name="button_divide_text">÷</string>
    <string name="button_multiply_text">×</string>
    <string name="button_decimal_text">.</string>
    <string name="button_parentheses_text">( )</string>

</resources>