<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Layout -->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:id="@+id/linearLayout"
        android:background="@color/cardview_dark_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/current_sum"
            style="@style/sum_display"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/calculator_display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/calculator_display"
            style="@style/answer_display"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_sum" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="409dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculator_display">

            <!-- Buttons -->

            <!-- Special Buttons -->

            <Button
                android:id="@+id/button_memory_store"
                style="@style/specials"
                android:layout_marginTop="16dp"
                android:text="@string/button_memory_store_text"
                app:layout_constraintBottom_toTopOf="@+id/button_memory_recall"
                app:layout_constraintEnd_toStartOf="@+id/button_root"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_root"
                style="@style/specials"
                android:layout_marginTop="16dp"
                android:text="@string/button_square_root_text"
                app:layout_constraintBottom_toTopOf="@+id/button_negative"
                app:layout_constraintEnd_toStartOf="@+id/button_square"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_memory_store"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_square"
                style="@style/specials"
                android:layout_marginTop="16dp"
                android:text="@string/button_square_text"
                app:layout_constraintBottom_toTopOf="@+id/button_percent"
                app:layout_constraintEnd_toStartOf="@+id/button_all_cancel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_root"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_all_cancel"
                style="@style/ac"
                android:layout_marginTop="16dp"
                android:text="@string/button_ac_text"
                app:layout_constraintBottom_toTopOf="@+id/button_divide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_square"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_memory_recall"
                style="@style/specials"
                android:text="@string/button_memory_recall_text"
                app:layout_constraintBottom_toTopOf="@+id/button_seven"
                app:layout_constraintEnd_toStartOf="@+id/button_negative"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_memory_store" />

            <Button
                android:id="@+id/button_negative"
                style="@style/specials"
                android:text="@string/button_negative_text"
                app:layout_constraintBottom_toTopOf="@+id/button_eight"
                app:layout_constraintEnd_toStartOf="@+id/button_percent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_memory_recall"
                app:layout_constraintTop_toBottomOf="@+id/button_root" />

            <Button
                android:id="@+id/button_percent"
                style="@style/specials"
                android:text="@string/button_percent_text"
                app:layout_constraintBottom_toTopOf="@+id/button_nine"
                app:layout_constraintEnd_toStartOf="@+id/button_divide"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_negative"
                app:layout_constraintTop_toBottomOf="@+id/button_memory_store" />

            <!-- Numerical Buttons -->

            <Button
                android:id="@+id/button_zero"
                style="@style/numbers"
                android:layout_marginBottom="16dp"
                android:text="@string/button_zero_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_decimal"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_one" />

            <Button
                android:id="@+id/button_one"
                style="@style/numbers"
                android:text="@string/button_one_text"
                app:layout_constraintBottom_toTopOf="@+id/button_zero"
                app:layout_constraintEnd_toEndOf="@+id/button_two"
                app:layout_constraintEnd_toStartOf="@+id/button_two"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_four" />

            <Button
                android:id="@+id/button_two"
                style="@style/numbers"
                android:text="@string/button_two_text"
                app:layout_constraintBottom_toTopOf="@+id/button_decimal"
                app:layout_constraintEnd_toEndOf="@+id/button_three"
                app:layout_constraintEnd_toStartOf="@+id/button_three"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_one"
                app:layout_constraintTop_toBottomOf="@+id/button_five" />

            <Button
                android:id="@+id/button_three"
                style="@style/numbers"
                android:text="@string/button_three_text"
                app:layout_constraintBottom_toTopOf="@+id/button_parentheses"
                app:layout_constraintEnd_toEndOf="@+id/button_plus"
                app:layout_constraintEnd_toStartOf="@+id/button_plus"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_two"
                app:layout_constraintTop_toBottomOf="@+id/button_six" />

            <Button
                android:id="@+id/button_four"
                style="@style/numbers"
                android:text="@string/button_four_text"
                app:layout_constraintBottom_toTopOf="@+id/button_one"
                app:layout_constraintEnd_toStartOf="@+id/button_five"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_seven" />

            <Button
                android:id="@+id/button_five"
                style="@style/numbers"
                android:text="@string/button_five_text"
                app:layout_constraintBottom_toTopOf="@+id/button_two"
                app:layout_constraintEnd_toStartOf="@+id/button_six"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_four"
                app:layout_constraintTop_toBottomOf="@+id/button_eight" />

            <Button
                android:id="@+id/button_six"
                style="@style/numbers"
                android:text="@string/button_six_text"
                app:layout_constraintBottom_toTopOf="@+id/button_three"
                app:layout_constraintEnd_toStartOf="@+id/button_minus"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_five"
                app:layout_constraintTop_toBottomOf="@+id/button_nine" />

            <Button
                android:id="@+id/button_seven"
                style="@style/numbers"
                android:text="@string/button_seven_text"
                app:layout_constraintBottom_toTopOf="@+id/button_four"
                app:layout_constraintEnd_toStartOf="@+id/button_eight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_memory_recall" />

            <Button
                android:id="@+id/button_eight"
                style="@style/numbers"
                android:text="@string/button_eight_text"
                app:layout_constraintBottom_toTopOf="@+id/button_five"
                app:layout_constraintEnd_toStartOf="@+id/button_nine"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_seven"
                app:layout_constraintTop_toBottomOf="@+id/button_negative" />

            <Button
                android:id="@+id/button_nine"
                style="@style/numbers"
                android:text="@string/button_nine_text"
                app:layout_constraintBottom_toTopOf="@+id/button_six"
                app:layout_constraintEnd_toStartOf="@+id/button_multiply"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_eight"
                app:layout_constraintTop_toBottomOf="@+id/button_percent" />

            <Button
                android:id="@+id/button_decimal"
                style="@style/numbers"
                android:layout_marginBottom="16dp"
                android:text="@string/button_decimal_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_parentheses"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_zero"
                app:layout_constraintTop_toBottomOf="@+id/button_two" />

            <Button
                android:id="@+id/button_parentheses"
                style="@style/numbers"
                android:layout_marginBottom="16dp"
                android:text="@string/button_parentheses_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_equals"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_decimal"
                app:layout_constraintTop_toBottomOf="@+id/button_three" />

            <!-- Operator Buttons -->

            <Button
                android:id="@+id/button_equals"
                style="@style/operators"
                android:layout_marginBottom="16dp"
                android:text="@string/button_equals_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_parentheses"
                app:layout_constraintTop_toBottomOf="@+id/button_plus" />

            <Button
                android:id="@+id/button_plus"
                style="@style/operators"
                android:text="@string/button_plus_text"
                app:layout_constraintBottom_toTopOf="@+id/button_equals"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_three"
                app:layout_constraintTop_toBottomOf="@+id/button_minus" />

            <Button
                android:id="@+id/button_minus"
                style="@style/operators"
                android:text="@string/button_minus_text"
                app:layout_constraintBottom_toTopOf="@+id/button_plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_six"
                app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/operators"
                android:text="@string/button_multiply_text"
                app:layout_constraintBottom_toTopOf="@+id/button_minus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_nine"
                app:layout_constraintTop_toBottomOf="@+id/button_divide" />

            <Button
                android:id="@+id/button_divide"
                style="@style/operators"
                android:text="@string/button_divide_text"
                app:layout_constraintBottom_toTopOf="@+id/button_multiply"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_percent"
                app:layout_constraintTop_toBottomOf="@+id/button_all_cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>